feat: add message indicator when no recent results yet

--- a/src/stylesheets/RecentResultsList.scss
+++ b/src/stylesheets/RecentResultsList.scss
@@ -18,6 +18,12 @@
       padding-left: 20px;
     }
 
+    .coveo-recent-results-list-no-result {
+      text-align: center;
+      margin: 25px;
+      color: #67768b;
+    }
+
     .coveo-recent-results-list-body {
       background: white;
       margin-bottom: 1px;
